--- a/map制作ツール/MapmakingTool/MapmakingTool/imgui.ini
+++ b/map制作ツール/MapmakingTool/MapmakingTool/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=509,295
+Pos=26,70
+Size=320,100
+Collapsed=0
+
+[Window][オブジェクト情報]
+Pos=769,88
 Size=320,100
 Collapsed=0
 
