--- a/map制作ツール/MapmakingTool/MapmakingTool/imgui.ini
+++ b/map制作ツール/MapmakingTool/MapmakingTool/imgui.ini
@@ -9,7 +9,17 @@ Size=320,100
 Collapsed=0
 
 [Window][オブジェクト情報]
-Pos=769,88
+Pos=890,124
+Size=320,100
+Collapsed=0
+
+[Window][デバッグ情報]
+Pos=892,358
+Size=320,101
+Collapsed=0
+
+[Window][マップ情報]
+Pos=890,240
 Size=320,100
 Collapsed=0
 
