--- a/map制作ツール/MapmakingTool/MapmakingTool/MapmakingTool.vcxproj
+++ b/map制作ツール/MapmakingTool/MapmakingTool/MapmakingTool.vcxproj
@@ -151,6 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
+    <ClInclude Include="fileio.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imdebugwindow.h" />
     <ClInclude Include="imgui.h" />
@@ -172,6 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="fileio.cpp" />
     <ClCompile Include="imdebugwindow.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imguimanager.cpp" />
