--- a/UITool/3rdGradeTeamProjectFirst/imgui.ini
+++ b/UITool/3rdGradeTeamProjectFirst/imgui.ini
@@ -1,16 +1,16 @@
 [Window][Debug##Default]
-Pos=88,36
-Size=400,400
+Pos=-10,5
+Size=400,183
 Collapsed=0
 
 [Window][情報]
-Pos=42,49
-Size=363,568
+Pos=17,156
+Size=341,559
 Collapsed=0
 
 [Window][操作方法]
-Pos=1037,5
-Size=241,294
+Pos=1060,10
+Size=213,106
 Collapsed=0
 
 [Window][test]
@@ -19,7 +19,12 @@ Size=380,360
 Collapsed=0
 
 [Window][システム]
-Pos=886,357
-Size=384,351
+Pos=1069,141
+Size=211,577
+Collapsed=0
+
+[Window][オブジェクト]
+Pos=5,6
+Size=288,169
 Collapsed=0
 
