--- a/UITool/3rdGradeTeamProjectFirst/data/TXT/imgui.ini
+++ b/UITool/3rdGradeTeamProjectFirst/data/TXT/imgui.ini
@@ -1,16 +1,16 @@
 [Window][Debug##Default]
-Pos=88,36
-Size=400,400
+Pos=-10,5
+Size=400,183
 Collapsed=0
 
 [Window][情報]
-Pos=701,48
-Size=363,509
+Pos=80,85
+Size=341,343
 Collapsed=0
 
 [Window][操作方法]
-Pos=1019,7
-Size=241,367
+Pos=1060,10
+Size=213,106
 Collapsed=0
 
 [Window][test]
@@ -19,7 +19,12 @@ Size=380,360
 Collapsed=0
 
 [Window][システム]
-Pos=480,242
-Size=384,351
+Pos=1069,140
+Size=211,577
+Collapsed=0
+
+[Window][オブジェクト]
+Pos=5,6
+Size=288,169
 Collapsed=0
 
