【更新】UIツールバグ修正

--- a/UITool/3rdGradeTeamProjectFirst/3rdGradeTeamProjectFirst.vcxproj
+++ b/UITool/3rdGradeTeamProjectFirst/3rdGradeTeamProjectFirst.vcxproj
@@ -187,6 +187,7 @@
     <ClCompile Include="player.cpp" />
     <ClCompile Include="player_custom.cpp" />
     <ClCompile Include="player_sp.cpp" />
+    <ClCompile Include="preview.cpp" />
     <ClCompile Include="renderer.cpp" />
     <ClCompile Include="result.cpp" />
     <ClCompile Include="scene.cpp" />
@@ -243,6 +244,7 @@
     <ClInclude Include="outline.h" />
     <ClInclude Include="pause.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="preview.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="result.h" />
@@ -259,6 +261,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UItool.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="test.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
